fixed hint z-index

--- a/src/assets/scss/_hint.scss
+++ b/src/assets/scss/_hint.scss
@@ -1,7 +1,6 @@
 .hint {
   background-color: $white;
   position: fixed;
-  z-index: 999;
   margin: 4px 0;
   width: 210px;
   box-shadow: 0 0 2px 0 rgba(0,0,0,0.75);
